# ardaaras99.github.io

./: _config.yml  pyproject.toml
_data/: navigation.yml
_layouts/: default.html
_pages/: about.md  bio.md  publications1.md  service.md  teaching.html
_teaching/: 2014-spring-teaching-1.md
